// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with \`openAll\` prop 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--light"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="true"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              3
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-treeview-node__children"
          >
            <div
              aria-expanded="false"
              class="v-treeview-node v-treeview-node--leaf"
            >
              <div
                class="v-treeview-node__root"
              >
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__content"
                >
                  <div
                    class="v-treeview-node__label"
                  >
                    <div
                      class="v-avatar white--text primary"
                      style="height: 32px; min-width: 32px; width: 32px;"
                    >
              0
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-expanded="true"
              class="v-treeview-node"
            >
              <div
                class="v-treeview-node__root"
              >
                <div
                  class="v-treeview-node__level"
                />
                <button
                  class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
                  type="button"
                >
                  arrow_drop_down
                </button>
                <div
                  class="v-treeview-node__content"
                >
                  <div
                    class="v-treeview-node__label"
                  >
                    <div
                      class="v-avatar white--text primary"
                      style="height: 32px; min-width: 32px; width: 32px;"
                    >
              3
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-treeview-node__children"
              >
                <div
                  aria-expanded="false"
                  class="v-treeview-node v-treeview-node--leaf"
                >
                  <div
                    class="v-treeview-node__root"
                  >
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__content"
                    >
                      <div
                        class="v-treeview-node__label"
                      >
                        <div
                          class="v-avatar white--text primary"
                          style="height: 32px; min-width: 32px; width: 32px;"
                        >
              0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="v-treeview-node v-treeview-node--leaf"
                >
                  <div
                    class="v-treeview-node__root"
                  >
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__content"
                    >
                      <div
                        class="v-treeview-node__label"
                      >
                        <div
                          class="v-avatar white--text primary"
                          style="height: 32px; min-width: 32px; width: 32px;"
                        >
              0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="v-treeview-node v-treeview-node--leaf"
                >
                  <div
                    class="v-treeview-node__root"
                  >
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__content"
                    >
                      <div
                        class="v-treeview-node__label"
                      >
                        <div
                          class="v-avatar white--text primary"
                          style="height: 32px; min-width: 32px; width: 32px;"
                        >
              0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-expanded="false"
              class="v-treeview-node v-treeview-node--leaf"
            >
              <div
                class="v-treeview-node__root"
              >
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__content"
                >
                  <div
                    class="v-treeview-node__label"
                  >
                    <div
                      class="v-avatar white--text primary"
                      style="height: 32px; min-width: 32px; width: 32px;"
                    >
              0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--light"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Email: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="email"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Email
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  internet.userName6
                </td>
                <td>
                  name.firstName6
                </td>
                <td>
                  name.lastName6
                </td>
                <td>
                  internet.email6
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName7
                </td>
                <td>
                  name.firstName7
                </td>
                <td>
                  name.lastName7
                </td>
                <td>
                  internet.email7
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName73
                </td>
                <td>
                  name.firstName73
                </td>
                <td>
                  name.lastName73
                </td>
                <td>
                  internet.email73
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName74
                </td>
                <td>
                  name.firstName74
                </td>
                <td>
                  name.lastName74
                </td>
                <td>
                  internet.email74
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName740
                </td>
                <td>
                  name.firstName740
                </td>
                <td>
                  name.lastName740
                </td>
                <td>
                  internet.email740
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName741
                </td>
                <td>
                  name.firstName741
                </td>
                <td>
                  name.lastName741
                </td>
                <td>
                  internet.email741
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName742
                </td>
                <td>
                  name.firstName742
                </td>
                <td>
                  name.lastName742
                </td>
                <td>
                  internet.email742
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName75
                </td>
                <td>
                  name.firstName75
                </td>
                <td>
                  name.lastName75
                </td>
                <td>
                  internet.email75
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName8
                </td>
                <td>
                  name.firstName8
                </td>
                <td>
                  name.lastName8
                </td>
                <td>
                  internet.email8
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with custom props 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--dark"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--dark"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              3
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--dark"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--dark"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--dark"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--dark"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Email: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="email"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Email
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--dark"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <thead>
              <tr
                class="v-data-table__progress"
              >
                <th
                  class="column"
                  colspan="4"
                >
                  <div
                    aria-valuemax="100"
                    aria-valuemin="0"
                    class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--dark"
                    role="progressbar"
                    style="height: 2px;"
                  >
                    <div
                      class="v-progress-linear__background primary"
                      style="opacity: 0.3; left: 0%; width: 100%;"
                    />
                    <div
                      class="v-progress-linear__buffer"
                    />
                    <transition-stub
                      name="fade-transition"
                    >
                      <div
                        class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
                      >
                        <div
                          class="v-progress-linear__indeterminate long primary"
                        />
                        <div
                          class="v-progress-linear__indeterminate short primary"
                        />
                      </div>
                    </transition-stub>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  internet.userName6
                </td>
                <td>
                  name.firstName6
                </td>
                <td>
                  name.lastName6
                </td>
                <td>
                  internet.email6
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName7
                </td>
                <td>
                  name.firstName7
                </td>
                <td>
                  name.lastName7
                </td>
                <td>
                  internet.email7
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName8
                </td>
                <td>
                  name.firstName8
                </td>
                <td>
                  name.lastName8
                </td>
                <td>
                  internet.email8
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with custom props and expand slots 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--light"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="expand-slot"
                />
                <div
                  class="expand-append-slot"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="expand-slot"
                />
                <div
                  class="expand-append-slot"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="expand-slot"
                />
                <div
                  class="expand-append-slot"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--light"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Email: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="email"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Email
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  internet.userName6
                </td>
                <td>
                  name.firstName6
                </td>
                <td>
                  name.lastName6
                </td>
                <td>
                  internet.email6
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName7
                </td>
                <td>
                  name.firstName7
                </td>
                <td>
                  name.lastName7
                </td>
                <td>
                  internet.email7
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName8
                </td>
                <td>
                  name.firstName8
                </td>
                <td>
                  name.lastName8
                </td>
                <td>
                  internet.email8
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with default and required props (changed headers) 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--light"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              3
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--light"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="3"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="3"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="3"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  internet.userName6
                </td>
                <td>
                  name.firstName6
                </td>
                <td>
                  name.lastName6
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName7
                </td>
                <td>
                  name.firstName7
                </td>
                <td>
                  name.lastName7
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName8
                </td>
                <td>
                  name.firstName8
                </td>
                <td>
                  name.lastName8
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with default and required props 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--light"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              3
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--light"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Email: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="email"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Email
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  internet.userName6
                </td>
                <td>
                  name.firstName6
                </td>
                <td>
                  name.lastName6
                </td>
                <td>
                  internet.email6
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName7
                </td>
                <td>
                  name.firstName7
                </td>
                <td>
                  name.lastName7
                </td>
                <td>
                  internet.email7
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName8
                </td>
                <td>
                  name.firstName8
                </td>
                <td>
                  name.lastName8
                </td>
                <td>
                  internet.email8
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with default and required props and trigger click 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--light"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="true"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              3
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-treeview-node__children"
          >
            <div
              aria-expanded="false"
              class="v-treeview-node v-treeview-node--leaf"
            >
              <div
                class="v-treeview-node__root"
              >
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__content"
                >
                  <div
                    class="v-treeview-node__label"
                  >
                    <div
                      class="v-avatar white--text primary"
                      style="height: 32px; min-width: 32px; width: 32px;"
                    >
              0
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-expanded="true"
              class="v-treeview-node"
            >
              <div
                class="v-treeview-node__root"
              >
                <div
                  class="v-treeview-node__level"
                />
                <button
                  class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light v-treeview-node__toggle--open"
                  type="button"
                >
                  arrow_drop_down
                </button>
                <div
                  class="v-treeview-node__content"
                >
                  <div
                    class="v-treeview-node__label"
                  >
                    <div
                      class="v-avatar white--text primary"
                      style="height: 32px; min-width: 32px; width: 32px;"
                    >
              3
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-treeview-node__children"
              >
                <div
                  aria-expanded="false"
                  class="v-treeview-node v-treeview-node--leaf"
                >
                  <div
                    class="v-treeview-node__root"
                  >
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__content"
                    >
                      <div
                        class="v-treeview-node__label"
                      >
                        <div
                          class="v-avatar white--text primary"
                          style="height: 32px; min-width: 32px; width: 32px;"
                        >
              0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="v-treeview-node v-treeview-node--leaf"
                >
                  <div
                    class="v-treeview-node__root"
                  >
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__content"
                    >
                      <div
                        class="v-treeview-node__label"
                      >
                        <div
                          class="v-avatar white--text primary"
                          style="height: 32px; min-width: 32px; width: 32px;"
                        >
              0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-expanded="false"
                  class="v-treeview-node v-treeview-node--leaf"
                >
                  <div
                    class="v-treeview-node__root"
                  >
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__level"
                    />
                    <div
                      class="v-treeview-node__content"
                    >
                      <div
                        class="v-treeview-node__label"
                      >
                        <div
                          class="v-avatar white--text primary"
                          style="height: 32px; min-width: 32px; width: 32px;"
                        >
              0
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-expanded="false"
              class="v-treeview-node v-treeview-node--leaf"
            >
              <div
                class="v-treeview-node__root"
              >
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__level"
                />
                <div
                  class="v-treeview-node__content"
                >
                  <div
                    class="v-treeview-node__label"
                  >
                    <div
                      class="v-avatar white--text primary"
                      style="height: 32px; min-width: 32px; width: 32px;"
                    >
              0
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--light"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Email: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="email"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Email
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  internet.userName6
                </td>
                <td>
                  name.firstName6
                </td>
                <td>
                  name.lastName6
                </td>
                <td>
                  internet.email6
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName7
                </td>
                <td>
                  name.firstName7
                </td>
                <td>
                  name.lastName7
                </td>
                <td>
                  internet.email7
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName73
                </td>
                <td>
                  name.firstName73
                </td>
                <td>
                  name.lastName73
                </td>
                <td>
                  internet.email73
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName74
                </td>
                <td>
                  name.firstName74
                </td>
                <td>
                  name.lastName74
                </td>
                <td>
                  internet.email74
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName740
                </td>
                <td>
                  name.firstName740
                </td>
                <td>
                  name.lastName740
                </td>
                <td>
                  internet.email740
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName741
                </td>
                <td>
                  name.firstName741
                </td>
                <td>
                  name.lastName741
                </td>
                <td>
                  internet.email741
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName742
                </td>
                <td>
                  name.firstName742
                </td>
                <td>
                  name.lastName742
                </td>
                <td>
                  internet.email742
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName75
                </td>
                <td>
                  name.firstName75
                </td>
                <td>
                  name.lastName75
                </td>
                <td>
                  internet.email75
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  internet.userName8
                </td>
                <td>
                  name.firstName8
                </td>
                <td>
                  name.lastName8
                </td>
                <td>
                  internet.email8
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with default props and data-table \`items\` slot 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--light"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              3
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--light"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Email: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="email"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Email
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="items-slot"
              />
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr
                class="items-slot"
              />
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr
                class="items-slot"
              />
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-treeview-data-table Renders \`c-treeview-data-table\` with default props and data-table values slots 1`] = `
<div
  class="treeview-data-table v-sheet theme--light"
>
  <div
    class="layout"
  >
    <div
      class="treeview-data-table--tree mr-4"
    >
      <div
        class="v-treeview theme--light"
      >
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node"
        >
          <div
            class="v-treeview-node__root"
          >
            <button
              class="v-icon notranslate v-treeview-node__toggle v-icon--link material-icons theme--light"
              type="button"
            >
              arrow_drop_down
            </button>
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              3
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-expanded="false"
          class="v-treeview-node v-treeview-node--leaf"
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
            <div
              class="v-treeview-node__content"
            >
              <div
                class="v-treeview-node__label"
              >
                <div
                  class="v-avatar white--text primary"
                  style="height: 32px; min-width: 32px; width: 32px;"
                >
              0
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex"
    >
      <div
        class="v-data-table theme--light"
        header-text="text"
      >
        <div
          class="v-data-table__wrapper"
        >
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <transition-group-stub
            class="v-data-table__expanded__col"
            colspan="4"
            tag="td"
          />
          <table>
            <colgroup>
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
              <col
                class=""
              />
            </colgroup>
            <thead
              class="v-data-table-header"
            >
              <tr>
                <th
                  aria-label="Username: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="username"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Username
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Firstname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="firstname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Firstname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Lastname: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="lastname"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Lastname
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
                <th
                  aria-label="Email: Not sorted. Activate to sort ascending."
                  aria-sort="none"
                  class="text-start sortable"
                  data-value="email"
                  role="columnheader"
                  scope="col"
                >
                  <span>
                    Email
                  </span>
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                    style="font-size: 18px;"
                  >
                    arrow_upward
                  </i>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  <span
                    class="username-slot"
                  />
                </td>
                <td>
                  <span
                    class="firstname-slot"
                  />
                </td>
                <td>
                  name.lastName6
                </td>
                <td>
                  internet.email6
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  <span
                    class="username-slot"
                  />
                </td>
                <td>
                  <span
                    class="firstname-slot"
                  />
                </td>
                <td>
                  name.lastName7
                </td>
                <td>
                  internet.email7
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
              <tr>
                <td>
                  <span
                    class="username-slot"
                  />
                </td>
                <td>
                  <span
                    class="firstname-slot"
                  />
                </td>
                <td>
                  name.lastName8
                </td>
                <td>
                  internet.email8
                </td>
              </tr>
              <tr
                class="v-data-table__expanded v-data-table__expanded__row"
              />
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
